# transcriptor

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .python-version  Dockerfile  Makefile  build.mjs  docker-compose.yml  fly.toml  makefile  package.json  pnpm-lock.yaml  pyproject.toml  pyrightconfig.json  run.sh  tailwind.config.js  tsconfig.json
backend/app/: components.py  errors.py  main.py  settings.py
backend/app/common/: templates.py
backend/app/dependencies/: auth.py
backend/app/middleware/: cached_static.py  not_found.py
backend/app/routers/: auth.py  landing.py  transcriptor.py
backend/app/services/: auth.py  openai.py  transcriptor.py
backend/components/: BaseHtml.jinja  Landing.jinja  Login.jinja  Transcriptor.jinja
backend/components/Landing/: Expandable.jinja  Header.jinja  HowWorks.jinja  Navbar.jinja  NavbarLink.jinja  PriceCard.jinja  Pricing.jinja
backend/components/Login/: Form.jinja
backend/components/Transcriptor/: FileUploader.jinja
backend/components/Utils/: Tab.jinja  TabContainer.jinja
backend/templates/: base.html
backend/templates/landing/: landing.html
backend/templates/login/: login-form.html  login.html
backend/templates/transcriptor/: index.html
frontend/: build.mjs  index.ts
frontend/src/: base.ts  login.ts
reveal/: main.py
static/: NotFound.html
static/css/: main.css
static/js/: base.js  file-uploader.js
static/styles/: landing.css  main.css
supabase/: config.toml
supabase/migrations/: 20240112003055_create_profiles_table.sql  20240428165515_remote_schema.sql  20240428165621_remote_schema.sql
templates/: base.html  base_with_menu.html  file-uploader.html  index.html  jsconfig.json  navbar.html
templates/login/: login-form.html  login.html
templates/transcriptor/: file-uploader.html  index.html  menu.html  transcription.html
transcriptor/: logging.py  main.py  settings.py
transcriptor/common/: templates.py
transcriptor/db/: engine.py  session.py
transcriptor/dependencies/: auth.py
transcriptor/dtos/: payments.py
transcriptor/middleware/: cached_static.py  rate_limit.py  supabase_session.py
transcriptor/models/: annotations.py  base.py  mixins.py  payments.py  profile.py  user.py
transcriptor/redis/: connection.py
transcriptor/repository/: profile.py
transcriptor/routers/: auth.py  info.py  payments.py  transcriptor.py
transcriptor/services/: auth.py  openai.py  payments.py  transcriptor.py  user.py
transcriptor/session/: base.py  postgres.py  redis.py  storage.py
transcriptor/static/css/: main.css
transcriptor/templates/: base.html  base_with_menu.html  privacy.html
transcriptor/templates/billing/: index.html
transcriptor/templates/components/: base-modal.html  google.html  pago.html
transcriptor/templates/transcriptor/: conectar-chatgpt.html
