[tool.poetry]
name = "transcriptor"
version = "0.1.0"
description = ""
authors = ["Hector Aguirre <hector.aguirre.arista@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
supabase = "^2.2.0"
openai = "^1.3.7"
uvicorn = "^0.24.0.post1"
jinja2 = "^3.1.2"
python-multipart = "^0.0.6"
pydantic = "^2.5.2"
pydantic-settings = "^2.1.0"
itsdangerous = "^2.1.2"
requests = "^2.31.0"
mercadopago = "^2.2.1"
pytz = "^2023.3.post1"


[tool.poetry.group.dev.dependencies]
pytailwindcss = "^0.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
